--- a/Battleship/App.xaml
+++ b/Battleship/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Battleship"
-             StartupUri="MainWindow.xaml">
+             StartupUri="GUIComponents/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
