--- a/Battleship/GUIComponents/GameWindow.xaml
+++ b/Battleship/GUIComponents/GameWindow.xaml
@@ -1,15 +1,12 @@
-﻿<Window x:Class="Battleship.GUIComponents.CanvasWindow"
+﻿<Window x:Class="Battleship.GUIComponents.GameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Battleship"
+        xmlns:local="clr-namespace:Battleship.GUIComponents"
         mc:Ignorable="d"
-        Title="CanvasWindow" Height="591.96" Width="1152">
+        Title="GameWindow" Height="450" Width="800">
     <Grid>
         
-        
     </Grid>
-
-
 </Window>
