--- a/Battleship/GUIComponents/SetWindow.xaml
+++ b/Battleship/GUIComponents/SetWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Battleship.SetWindow"
+﻿<Window x:Class="Battleship.GUIComponents.SetWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
