--- a/Battleship/GUIComponents/SetWindow.xaml
+++ b/Battleship/GUIComponents/SetWindow.xaml
@@ -7,18 +7,8 @@
         mc:Ignorable="d"
         Title="SetWindow" Height="450" Width="800">
     <Grid Margin="0,0,0,-6">
-        <TextBox x:Name="MWtb_gridtablewidth" HorizontalAlignment="Left" Margin="203,55,0,0" Text="12" TextWrapping="Wrap" VerticalAlignment="Top" Width="69" Height="26" MouseEnter="MWtb_gridtablewidth_MouseEnter"/>
-        <Label x:Name="MWl_gridsize" Content="Enter Game Window width" HorizontalAlignment="Left" Margin="44,55,0,0" VerticalAlignment="Top" Width="159"/>
-        <Button Content="Create grid window" HorizontalAlignment="Left" Margin="44,212,0,0" VerticalAlignment="Top" Click="Button_Click" Height="53" Width="228" Background="#FF55A874"/>
-        <Button Name="Exit_btn" Content="Exit" HorizontalAlignment="Left" Margin="458,317,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.75,0.745" Height="92" Width="282" Click="Exit_btn_Click" Background="#FFD79595"/>
-        <Label Content="Rows" HorizontalAlignment="Left" Margin="142,109,0,0" VerticalAlignment="Top" Height="25" Width="56" RenderTransformOrigin="0.479,0.858"/>
-        <TextBox Name="RowQtyInputTxtbox" HorizontalAlignment="Left" Margin="203,109,0,0" Text="30" TextWrapping="Wrap" VerticalAlignment="Top" Width="69" Height="25"/>
-        <Label x:Name="BoardHeight" Content="Gamewindow Height" HorizontalAlignment="Left" Margin="44,81,0,0" VerticalAlignment="Top" Width="159" Height="28"/>
-        <TextBox Name="MWtxt_gridheight" HorizontalAlignment="Left" Margin="203,81,0,0" Text="6" TextWrapping="Wrap" VerticalAlignment="Top" Width="69" Height="28"/>
-        <CheckBox Name="MainGridChckbox" Content="Colored Grid?" HorizontalAlignment="Left" Margin="160,139,0,0" VerticalAlignment="Top"/>
-        <RadioButton Name="Radioplayer1" Content="Player1" HorizontalAlignment="Left" Margin="187,172,0,0" VerticalAlignment="Top"/>
-        <RadioButton Name="Radioplayer2" Content="Player2" HorizontalAlignment="Left" Margin="187,192,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="CanvaCreate" Content="MakeCanvas" HorizontalAlignment="Left" Margin="483,81,0,0" VerticalAlignment="Top" Height="73" Width="241"/>
+        <Button Name="Exit_btn" Content="Exit" HorizontalAlignment="Left" Margin="157,318,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.75,0.745" Height="98" Width="522" Click="Exit_btn_Click" Background="#FFD79595"/>
+        <Button Name="CanvaCreate" Content="MakeCanvas" HorizontalAlignment="Left" Margin="157,83,0,0" VerticalAlignment="Top" Height="137" Width="522" Background="#FFE4E8E8" Click="CanvaCreate_Click"/>
 
     </Grid>
 </Window>
