--- a/Battleship/GUIComponents/GameWindow.xaml
+++ b/Battleship/GUIComponents/GameWindow.xaml
@@ -5,8 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Battleship.GUIComponents"
         mc:Ignorable="d"
-        Title="GameWindow" Height="450" Width="800">
+        Width="1000" Height="600">
     <Grid>
-        
+        <Grid x:Name="Player1Board" Margin="200,0,0,0" Visibility="Visible"></Grid>
+        <Grid x:Name="Player2Board" Margin="200,0,0,0" Visibility="Hidden"></Grid>
+        <Grid x:Name="ShipDeploymentGrid" Margin="0,0,800,0">
+            <Button x:Name="DestroyerDeploymentButton" Content="Deploy Destroyer" Margin="10,10,10,524" Click="DestroyerDeploymentButton_Click"></Button>
+            <Button x:Name="SubmarineDeploymentButton" Content="Deploy Submarine" Margin="10,65,10,469" Click="SubmarineDeploymentButton_Click"></Button>
+            <Button x:Name="CruiserDeploymentButton" Content="Deploy Cruiser" Margin="10,120,10,414" Click="CruiserDeploymentButton_Click"></Button>
+            <Button x:Name="BattleshipDeploymentButton" Content="Deploy Battleship" Margin="10,175,10,359" Click="BattleshipDeploymentButton_Click"></Button>
+            <Button x:Name="CarrierDeploymentButton" Content="Deploy Carrier" Margin="10,230,10,304" Click="CarrierDeploymentButton_Click"></Button>
+
+            <Button x:Name="NextPlayerTurnButton" Margin="10,414,10,120">Next Player Turn</Button>
+            <Button x:Name="RestGameButton" Margin="10,469,10,65" Click="RestGameButton_Click">Reset Game</Button>
+            <Button x:Name="EndGameButton" Margin="10,524,10,10" Click="EndGameButton_Click">End Game</Button>
+        </Grid>
     </Grid>
 </Window>
