--- a/Battleship/GUIComponents/GameWindow.xaml
+++ b/Battleship/GUIComponents/GameWindow.xaml
@@ -7,8 +7,9 @@
         mc:Ignorable="d"
         Width="1000" Height="600">
     <Grid>
-        <Grid x:Name="Player1Board" Margin="200,0,0,0" Visibility="Visible"></Grid>
-        <Grid x:Name="Player2Board" Margin="200,0,0,0" Visibility="Hidden"></Grid>
+        <Grid x:Name="Player1Board" Margin="200,0,10,0" Height="564" VerticalAlignment="Center">
+            <local:AttackGridUserControl Margin="0,0,0,0"></local:AttackGridUserControl>
+        </Grid>
         <Grid x:Name="ShipDeploymentGrid" Margin="0,0,800,0">
             <Button x:Name="DestroyerDeploymentButton" Content="Deploy Destroyer" Margin="10,10,10,524" Click="DestroyerDeploymentButton_Click"></Button>
             <Button x:Name="SubmarineDeploymentButton" Content="Deploy Submarine" Margin="10,65,10,469" Click="SubmarineDeploymentButton_Click"></Button>
