--- a/Battleship/GUIComponents/GameWindow.xaml
+++ b/Battleship/GUIComponents/GameWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Width="1000" Height="600">
     <Grid>
-        <Grid x:Name="Player1Board" Margin="200,0,10,0" Height="564" VerticalAlignment="Center">
-            <local:AttackGridUserControl Margin="0,0,0,0"></local:AttackGridUserControl>
+        <Grid x:Name="Player1Board">
+            <local:AttackGridUserControl Margin="600,0,180,0" Height="220" Width="220"></local:AttackGridUserControl>
         </Grid>
         <Grid x:Name="ShipDeploymentGrid" Margin="0,0,800,0">
             <Button x:Name="DestroyerDeploymentButton" Content="Deploy Destroyer" Margin="10,10,10,524" Click="DestroyerDeploymentButton_Click"></Button>
@@ -17,7 +17,7 @@
             <Button x:Name="BattleshipDeploymentButton" Content="Deploy Battleship" Margin="10,175,10,359" Click="BattleshipDeploymentButton_Click"></Button>
             <Button x:Name="CarrierDeploymentButton" Content="Deploy Carrier" Margin="10,230,10,304" Click="CarrierDeploymentButton_Click"></Button>
 
-            <Button x:Name="NextPlayerTurnButton" Margin="10,414,10,120">Next Player Turn</Button>
+            <Button x:Name="NextPlayerTurnButton" Margin="10,414,10,120" Click="NextPlayerTurnButton_Click">Next Player Turn</Button>
             <Button x:Name="RestGameButton" Margin="10,469,10,65" Click="RestGameButton_Click">Reset Game</Button>
             <Button x:Name="EndGameButton" Margin="10,524,10,10" Click="EndGameButton_Click">End Game</Button>
         </Grid>
