--- a/Battleship/GUIComponents/GameWindow.xaml
+++ b/Battleship/GUIComponents/GameWindow.xaml
@@ -7,8 +7,13 @@
         mc:Ignorable="d"
         Width="1000" Height="600">
     <Grid>
-        <Grid x:Name="Player1Board">
+        <Grid x:Name="Player1Board" Visibility="Visible">
             <local:AttackGridUserControl Margin="600,0,180,0" Height="220" Width="220"></local:AttackGridUserControl>
+            <local:DefenseGridUserControl Margin="380,0,400,0" Height="220" Width="220"></local:DefenseGridUserControl>
+        </Grid>
+        <Grid x:Name="Player2Board" Visibility="Hidden">
+            <local:AttackGridUserControl Margin="600,0,180,0" Height="220" Width="220"></local:AttackGridUserControl>
+            <local:DefenseGridUserControl Margin="380,0,400,0" Height="220" Width="220"></local:DefenseGridUserControl>
         </Grid>
         <Grid x:Name="ShipDeploymentGrid" Margin="0,0,800,0">
             <Button x:Name="DestroyerDeploymentButton" Content="Deploy Destroyer" Margin="10,10,10,524" Click="DestroyerDeploymentButton_Click"></Button>
