--- a/Battleship/MainWindow.xaml
+++ b/Battleship/MainWindow.xaml
@@ -24,5 +24,10 @@
         <Button x:Name="StartGameButton" Content="Start Game" HorizontalAlignment="Left" Margin="10,297,0,0" VerticalAlignment="Top" Width="322" Grid.ColumnSpan="2" Grid.Column="1" Click="StartGameButton_Click" Height="64"/>
         <Button x:Name="AboutButton" Content="About" Grid.Column="2" HorizontalAlignment="Left" Margin="277,52,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.681,-0.015" Grid.ColumnSpan="2" Width="140" Click="AboutButton_Click"/>
         <Button x:Name="QuitButton" Content="Quit" Grid.Column="2" HorizontalAlignment="Left" Margin="248,297,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.681,-0.015" Grid.ColumnSpan="2" Width="169" Click="QuitButton_Click" Height="64"/>
+        <Grid Background="LightGray" Grid.ColumnSpan="3" Margin="10,270,23,108" Grid.Column="1">
+            <RadioButton x:Name="playerToPlayerRadioButton" Content="Player to Player" Margin="0,0,448,0" />
+            <RadioButton x:Name="playerToComputerRadioButton" Content="Player to Computer" Margin="216,0,215,0" />
+            <RadioButton x:Name="computerToComputerRadioButton" Content="Computer to Computer" Margin="408,0,0,1" Height="22" VerticalAlignment="Bottom" />
+        </Grid>
     </Grid>
 </Window>
