--- a/Battleship/GameWindow.xaml
+++ b/Battleship/GameWindow.xaml
@@ -16,7 +16,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Button x:Name="AttackBtn" Content="Swicth Player" HorizontalAlignment="Left" Margin="262,26,0,0" VerticalAlignment="Top" Height="66" Width="430" Click="AttackBtn_Click_1" FontSize="36" FontFamily="Arial Black">
+        <Button x:Name="AttackBtn" Content="Switch Player" HorizontalAlignment="Left" Margin="262,26,0,0" VerticalAlignment="Top" Height="66" Width="430" Click="AttackBtn_Click_1" FontSize="36" FontFamily="Arial Black">
             <Button.Background>
                 <ImageBrush ImageSource="/Z5WCC7LWJVBS3ODXWV6FYI6KXA.jpg"/>
             </Button.Background>
