Remove Exceptions from SaveLoad and Restructure Image Assets

--- a/Battleship/MainWindow.xaml
+++ b/Battleship/MainWindow.xaml
@@ -9,7 +9,7 @@
         Loaded="MainWindow_OnLoaded">
     <Grid Margin="0,0,0,0" Width="600" Height="400">
         <Grid.Background>
-            <ImageBrush ImageSource="/battlefield-5-pacific-map-volcanic-rock.jpg"/>
+            <ImageBrush ImageSource="/Images/MainWindow Background.jpg"/>
         </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*"/>
