--- a/Battleship/GameWindow.xaml
+++ b/Battleship/GameWindow.xaml
@@ -11,18 +11,18 @@
     </Window.Background>
     <Grid x:Name="Maingrid" ShowGridLines="True">
         <Grid.Background>
-            <ImageBrush ImageSource="/8fbed52d9783b09666c5212ef2a30047.jpg"/>
+            <ImageBrush ImageSource="/Images/GameWindow Background.jpg"/>
         </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Button x:Name="AttackBtn" Content="Switch Player" HorizontalAlignment="Left" Margin="262,26,0,0" VerticalAlignment="Top" Height="66" Width="430" Click="AttackBtn_Click_1" FontSize="36" FontFamily="Arial Black">
             <Button.Background>
-                <ImageBrush ImageSource="/Z5WCC7LWJVBS3ODXWV6FYI6KXA.jpg"/>
+                <ImageBrush ImageSource="/Images/Rocket.jpg"/>
             </Button.Background>
         </Button>
-        <Image x:Name="PlayerOnelabel" HorizontalAlignment="Left" Height="66" Margin="132,26,0,0" VerticalAlignment="Top" Width="125" Source="/Playeroneturn.jpg" Stretch="Fill"/>
-        <Image x:Name="PlayerTwolabel" HorizontalAlignment="Left" Height="66" Margin="112,26,0,0" VerticalAlignment="Top" Width="125" Source="/Playertwoturn.jpg" Stretch="Fill" RenderTransformOrigin="1.802,0.385"/>
+        <Image x:Name="PlayerOnelabel" HorizontalAlignment="Left" Height="66" Margin="132,26,0,0" VerticalAlignment="Top" Width="125" Source="/Images/Player 1 Turn.jpg" Stretch="Fill"/>
+        <Image x:Name="PlayerTwolabel" HorizontalAlignment="Left" Height="66" Margin="112,26,0,0" VerticalAlignment="Top" Width="125" Source="/Images/Player 2 Turn.jpg" Stretch="Fill" RenderTransformOrigin="1.802,0.385"/>
         <Button x:Name="Confirm_Button" Content="Confirm Ship Placement" HorizontalAlignment="Left" Margin="112,115,0,0" VerticalAlignment="Top" Height="35" Width="145" Click="Confirm_Button_Click" Background="#FF8EADB3"/>
         <Button x:Name="BtnSave" Content="Save" HorizontalAlignment="Left" Height="35" Margin="262,115,0,0" VerticalAlignment="Top" Width="126" Click="BtnSave_Click"/>
         <Button x:Name="BtnLoad" Content="Load" HorizontalAlignment="Left" Height="35" Margin="400,115,0,0" VerticalAlignment="Top" Width="114" Click="BtnLoad_Click"/>
