--- a/Battleship/GameWindow.xaml
+++ b/Battleship/GameWindow.xaml
@@ -28,6 +28,7 @@
         <Button x:Name="BtnLoad" Content="Load" HorizontalAlignment="Left" Height="35" Margin="400,115,0,0" VerticalAlignment="Top" Width="114" Click="BtnLoad_Click"/>
         <Button x:Name="Reportgame" Content="GameStatusdictionary" HorizontalAlignment="Left" Margin="536,115,0,0" VerticalAlignment="Top" Height="35" Width="225" Background="#FF5A7C28" Click="Reportgame_Click"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="47,92,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button x:Name="SaveGameButton" Content="Save Game" HorizontalAlignment="Left" Height="33" Margin="4,117,0,0" VerticalAlignment="Top" Width="103" Click="BtnSaveGame_Click"/>
 
     </Grid>
 </Window>
