--- a/Battleship/MainWindow.xaml
+++ b/Battleship/MainWindow.xaml
@@ -20,8 +20,8 @@
         <Label x:Name="BattleshipTitleLabel" Content="Battleship: A Game of Adventure and Conquest" HorizontalAlignment="Left" Margin="25,172,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.829,-0.287" Height="28" Grid.Column="1" Grid.ColumnSpan="2" Width="281"/>
         <Label x:Name="Player1NameLabel" Content="Player 1 Name:&#xD;&#xA;" HorizontalAlignment="Left" Margin="4,43,0,0" VerticalAlignment="Top" Height="24" Grid.ColumnSpan="2" Grid.Column="1"/>
         <Label x:Name="Player2NameLabel" Content="Player 2 Name:&#xA;" HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top" Height="24" Grid.Column="1"/>
-        <TextBox x:Name="Player1NameTextBox" HorizontalAlignment="Left" Margin="112,43,0,0" Text="Player1" TextWrapping="Wrap" VerticalAlignment="Top" Width="194" Grid.Column="1" Grid.ColumnSpan="2" Height="24"/>
-        <TextBox x:Name="Player1NameTextBox1" HorizontalAlignment="Left" Margin="112,75,0,0" Text="Player2" TextWrapping="Wrap" VerticalAlignment="Top" Width="194" Grid.Column="1" Grid.ColumnSpan="2" Height="24"/>
+        <TextBox x:Name="Player1NameTextBox" HorizontalAlignment="Left" Margin="112,43,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="194" Grid.Column="1" Grid.ColumnSpan="2" Height="24"/>
+        <TextBox x:Name="Player2NameTextBox" HorizontalAlignment="Left" Margin="112,75,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="194" Grid.Column="1" Grid.ColumnSpan="2" Height="24"/>
         <Button x:Name="StartGameButton" Content="Start Game" HorizontalAlignment="Left" Margin="10,297,0,0" VerticalAlignment="Top" Width="322" Grid.ColumnSpan="2" Grid.Column="1" Click="StartGameButton_Click" Height="64"/>
         <Button x:Name="AboutButton" Content="About" Grid.Column="2" HorizontalAlignment="Left" Margin="277,52,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.681,-0.015" Grid.ColumnSpan="2" Width="140" Click="AboutButton_Click"/>
         <Button x:Name="QuitButton" Content="Quit" Grid.Column="2" HorizontalAlignment="Left" Margin="248,297,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.681,-0.015" Grid.ColumnSpan="2" Width="169" Click="QuitButton_Click" Height="64"/>
@@ -44,5 +44,8 @@
             <RadioButton x:Name="playerToComputerRadioButton" Content="Player to Computer" Margin="216,2,215,2" Checked="PlayerToComputerRadioButton_Checked" />
             <RadioButton x:Name="computerToComputerRadioButton" Content="Computer to Computer" Margin="408,0,0,0" Height="14" VerticalAlignment="Center" Checked="ComputerToComputerRadioButton_Checked" />
         </Grid>
+        <ListBox x:Name="SavedGamesList" Grid.Column="2" Margin="215,109,23,181" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnLoadGame" Content="btnLoadGame" Grid.Column="2" HorizontalAlignment="Left" Margin="248,87,0,0" VerticalAlignment="Top" Click="BtnLoadGame_Click"/>
+        <Button x:Name="btnDeleteGame" Content="btnDelete" Grid.Column="3" HorizontalAlignment="Left" Margin="16,87,0,0" VerticalAlignment="Top" Click="BtnDeleteGame_Click"/>
     </Grid>
 </Window>
