--- a/Battleship/GameWindow.xaml
+++ b/Battleship/GameWindow.xaml
@@ -24,11 +24,7 @@
         <Image x:Name="PlayerOnelabel" HorizontalAlignment="Left" Height="66" Margin="132,26,0,0" VerticalAlignment="Top" Width="125" Source="/Images/Player 1 Turn.jpg" Stretch="Fill"/>
         <Image x:Name="PlayerTwolabel" HorizontalAlignment="Left" Height="66" Margin="112,26,0,0" VerticalAlignment="Top" Width="125" Source="/Images/Player 2 Turn.jpg" Stretch="Fill" RenderTransformOrigin="1.802,0.385"/>
         <Button x:Name="Confirm_Button" Content="Confirm Ship Placement" HorizontalAlignment="Left" Margin="112,115,0,0" VerticalAlignment="Top" Height="35" Width="145" Click="Confirm_Button_Click" Background="#FF8EADB3"/>
-        <Button x:Name="BtnSave" Content="Save" HorizontalAlignment="Left" Height="35" Margin="262,115,0,0" VerticalAlignment="Top" Width="126" Click="BtnSave_Click"/>
-        <Button x:Name="BtnLoad" Content="Load" HorizontalAlignment="Left" Height="35" Margin="400,115,0,0" VerticalAlignment="Top" Width="114" Click="BtnLoad_Click"/>
-        <Button x:Name="Reportgame" Content="GameStatusdictionary" HorizontalAlignment="Left" Margin="536,115,0,0" VerticalAlignment="Top" Height="35" Width="225" Background="#FF5A7C28" Click="Reportgame_Click"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="47,92,0,0" VerticalAlignment="Top" Click="Button_Click"/>
-        <Button x:Name="SaveGameButton" Content="Save Game" HorizontalAlignment="Left" Height="33" Margin="4,117,0,0" VerticalAlignment="Top" Width="103" Click="BtnSaveGame_Click"/>
+        <Button x:Name="SaveGameButton" Content="Save Game" HorizontalAlignment="Left" Margin="547,115,0,0" VerticalAlignment="Top" Height="35" Width="145" Click="BtnSaveGame_Click"/>
 
     </Grid>
 </Window>
