Increase Width of Saved Games in XAML

--- a/Battleship/MainWindow.xaml
+++ b/Battleship/MainWindow.xaml
@@ -17,13 +17,13 @@
             <ColumnDefinition Width="79*"/>
             <ColumnDefinition Width="31*"/>
         </Grid.ColumnDefinitions>
-        <Label x:Name="BattleshipTitleLabel" Content="Battleship: A Game of Adventure and Conquest" Background="LightGray" HorizontalAlignment="Left" Margin="10,252,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.829,-0.287" Height="28" Grid.Column="1" Grid.ColumnSpan="2" Width="348"/>
+        <Label x:Name="BattleshipTitleLabel" Content="Battleship: A Game of Adventure and Conquest" Background="LightGray" HorizontalAlignment="Left" Margin="10,252,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.829,-0.287" Height="28" Grid.Column="1" Grid.ColumnSpan="2" Width="296"/>
         <Label x:Name="Player1NameLabel" Content="Player 1 Name:&#xD;&#xA;" HorizontalAlignment="Left" Margin="4,43,0,0" VerticalAlignment="Top" Height="24" Grid.Column="1"/>
         <Label x:Name="Player2NameLabel" Content="Player 2 Name:&#xA;" HorizontalAlignment="Left" Margin="4,75,0,0" VerticalAlignment="Top" Height="24" Grid.Column="1"/>
         <TextBox x:Name="Player1NameTextBox" HorizontalAlignment="Left" Margin="112,43,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="194" Grid.Column="1" Grid.ColumnSpan="2" Height="24"/>
         <TextBox x:Name="Player2NameTextBox" HorizontalAlignment="Left" Margin="112,75,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="194" Grid.Column="1" Grid.ColumnSpan="2" Height="24"/>
         <Button x:Name="StartGameButton" Content="Start Game" HorizontalAlignment="Left" Margin="10,358,0,0" VerticalAlignment="Top" Width="296" Grid.ColumnSpan="2" Grid.Column="1" Click="StartGameButton_Click" Height="32"/>
-        <Button x:Name="AboutButton" Content="About" Grid.Column="2" HorizontalAlignment="Left" Margin="215,43,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.681,-0.015" Grid.ColumnSpan="2" Width="202" Click="AboutButton_Click"/>
+        <Button x:Name="AboutButton" Content="About" Grid.Column="2" HorizontalAlignment="Left" Margin="163,43,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.681,-0.015" Grid.ColumnSpan="2" Width="254" Click="AboutButton_Click"/>
         <Button x:Name="QuitButton" Content="Quit" Grid.Column="2" HorizontalAlignment="Left" Margin="158,358,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.681,-0.015" Grid.ColumnSpan="2" Width="259" Click="QuitButton_Click" Height="32"/>
         <Grid Background="LightGray" Grid.ColumnSpan="3" Margin="10,285,22,93" Grid.Column="1">
             <Label x:Name="AIDifficultyLabel1" Content="AI Player 1 - Difficulty Settings" Margin="0,0,375,0"/>
@@ -44,8 +44,8 @@
             <RadioButton x:Name="playerToComputerRadioButton" Content="Player to Computer" Margin="216,2,215,2" Checked="PlayerToComputerRadioButton_Checked" />
             <RadioButton x:Name="computerToComputerRadioButton" Content="Computer to Computer" Margin="408,0,0,0" Height="14" VerticalAlignment="Center" Checked="ComputerToComputerRadioButton_Checked" />
         </Grid>
-        <ListBox x:Name="SavedGamesList" Grid.Column="2" Margin="215,109,23,120" Grid.ColumnSpan="2"/>
-        <Button x:Name="btnLoadGame" Content="Load Game" Grid.Column="2" HorizontalAlignment="Left" Margin="215,87,0,0" VerticalAlignment="Top" Click="BtnLoadGame_Click" Width="101"/>
-        <Button x:Name="btnDeleteGame" Content="Delete Game" Grid.Column="3" HorizontalAlignment="Left" Margin="0,87,0,0" VerticalAlignment="Top" Click="BtnDeleteGame_Click" Width="101"/>
+        <ListBox x:Name="SavedGamesList" Grid.Column="2" Margin="163,109,23,120" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnLoadGame" Content="Load Game" Grid.Column="2" HorizontalAlignment="Left" Margin="163,77,0,0" VerticalAlignment="Top" Click="BtnLoadGame_Click" Width="127"/>
+        <Button x:Name="btnDeleteGame" Content="Delete Game" Grid.Column="2" HorizontalAlignment="Left" Margin="290,77,0,0" VerticalAlignment="Top" Click="BtnDeleteGame_Click" Width="127" Grid.ColumnSpan="2"/>
     </Grid>
 </Window>
